--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "chai": "^4.3.7",
     "dotenv": "^16.3.1",
     "ethers": "^6.7.0",
     "hardhat": "^2.17.1"
